# maptapbot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
implementation-plans/: message-id-migration.md
specs/: admin.md  challenge_mode.md  channel_filter.md  daily_mode.md  help.md  leaderboard.md  leaderboard_daily_date_params.md  leaderboard_weekly.md  parse.md  reduce_noise.md  setup.md  todays_challenge.md
src/: admin.rs  db.rs  discord_command_options.rs  embed.rs  formatting.rs  handler.rs  handler_parse.rs  handler_pg_sync.rs  help.rs  main.rs  models.rs  parser.rs  pg_db.rs  plugin.rs  repository.rs  sqlite_repo.rs
src/plugins/: mod.rs
src/plugins/admin_plugin/: admin.rs  mod.rs
src/plugins/leaderboard_plugin/: mod.rs
src/plugins/self_plugin/: mod.rs  self.spec.md
src/plugins/today_plugin/: mod.rs
src/tests/: db.rs  models.rs  parser.rs
