[package]
name = "maptapbot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
dotenvy = "0.15"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
